<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.apache.zeppelin</groupId>
  <artifactId>zeppelin</artifactId>
  <packaging>pom</packaging>
  <version>1.0.0-T-SNAPSHOT</version>
  <name>Zeppelin</name>
  <description>Zeppelin project</description>
  <url>http://zeppelin.apache.org</url>

  <parent>
    <groupId>org.apache</groupId>
    <artifactId>apache</artifactId>
    <version>17</version>
  </parent>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <url>https://git-wip-us.apache.org/repos/asf/zeppelin.git</url>
    <connection>scm:git:https://git-wip-us.apache.org/repos/asf/zeppelin.git</connection>
    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/zeppelin.git</developerConnection>
  </scm>

  <inceptionYear>2013</inceptionYear>

  <modules>
    <module>zeppelin-interpreter</module>
    <module>zeppelin-zengine</module>
    <module>interpreters/markdown</module>

    <module>zeppelin-web</module>
    <module>zeppelin-server</module>
    <module>zeppelin-jupyter</module>

    <module>zeppelin-dependency</module>
    <module>zeppelin-core</module>
    <module>zeppelin-helium</module>
    <module>zeppelin-search</module>
    <module>zeppelin-migrations</module>
    <module>zeppelin-repository</module>
    <module>logger</module>

    <module>zeppelin-interpreter-core</module>
    <module>interpreters/t-python</module>
    <module>interpreters/jdbc</module>
  </modules>

  <properties>
    <dependency.com.google.code.findbugs>3.0.2</dependency.com.google.code.findbugs>
    <dependency.org.slf4j>1.7.25</dependency.org.slf4j>
    <dependency.io.atomix>3.0.0-rc4</dependency.io.atomix>
    <dependency.commons-configuration>1.10</dependency.commons-configuration>
    <dependency.jline>2.14.6</dependency.jline>
    <dependency.org.apache.thrift>0.12.0</dependency.org.apache.thrift>
    <dependency.org.sonatype.aethe>1.13.1</dependency.org.sonatype.aethe>
    <!-- TODO: MIGRATE TO NEW VERSION -->
    <dependency.com.google.code.gson>2.8.5</dependency.com.google.code.gson>
    <dependency.commons-io>2.6</dependency.commons-io>
    <dependency.org.apache.maven.maven-plugin-api>3.6.0</dependency.org.apache.maven.maven-plugin-api>

    <!-- https://stackoverflow.com/questions/28558111/aether-to-fetch-the-artifact-from-repository-at-runtime -->
    <dependency.org.apache.maven.wagon>1.0</dependency.org.apache.maven.wagon>

    <dependency.maven-aether-provider>3.0.3</dependency.maven-aether-provider>
    <jetty.version>9.4.14.v20181114</jetty.version>

    <google.truth.version>0.42</google.truth.version>
    <org.apache.httpcomponents.httpclient>4.5.6</org.apache.httpcomponents.httpclient>
    <org.apache.httpcomponents.httpasyncclient>4.1.4</org.apache.httpcomponents.httpasyncclient>
    <org.quartz-scheduler.quartz>2.3.0</org.quartz-scheduler.quartz>
    <org.apache.commons.commons-pool2>2.6.0</org.apache.commons.commons-pool2>
    <org.apache.commons.commons-exec>1.3</org.apache.commons.commons-exec>
    <commons-httpclient.commons-httpclient>3.1</commons-httpclient.commons-httpclient>
    <org.apache.lucene>5.3.1</org.apache.lucene>
    <com.github.eirslett.frontend-maven-plugin>1.3</com.github.eirslett.frontend-maven-plugin>

    <org.powermock>1.7.4</org.powermock>
    <com.nimbusds.nimbus-jose-jwt>6.7</com.nimbusds.nimbus-jose-jwt>
    <org.jvnet.libpam4j.libpam4j>1.4</org.jvnet.libpam4j.libpam4j>
    <org.bitbucket.cowwoc.diff-match-patch>1.0</org.bitbucket.cowwoc.diff-match-patch>
    <org.glassfish.jersey>2.28-RC4</org.glassfish.jersey>
    <org.glassfish.hk2>2.5.0</org.glassfish.hk2>
    <javax.ws.rs>2.1.1</javax.ws.rs>
    <javax.servlet>3.1.0</javax.servlet>
    <javax.inject>1</javax.inject>
    <org.apache.commons.commons-lang3>3.8.1</org.apache.commons.commons-lang3>
    <org.apache.shiro>1.4.0</org.apache.shiro>
    <plugin.scala.version>2.15.2</plugin.scala.version>

    <com.microsoft.azure.azure-data-lake-store-sdk>2.3.3</com.microsoft.azure.azure-data-lake-store-sdk>
    <com.microsoft.azure.azure-storage>8.0.0</com.microsoft.azure.azure-storage>
    <com.fasterxml.jackson>2.9.4</com.fasterxml.jackson>
    <com.google.guava>27.0.1-jre</com.google.guava>

    <markdown4j.version>2.2-cj-1.0</markdown4j.version>
    <pegdown.version>1.6.0</pegdown.version>

    <commons-codec>1.11</commons-codec>
    <python.py4j.version>0.10.7</python.py4j.version>
    <grpc.version>1.15.0</grpc.version>

    <os-maven-plugin>1.6.1</os-maven-plugin>
    <protobuf-maven-plugin>0.5.0</protobuf-maven-plugin>
    <protobuf.version>3.6.1</protobuf.version>
    <maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>

    <ignite.version>2.3.0</ignite.version>

    <postgresql.version>9.4-1201-jdbc41</postgresql.version>
    <hadoop.common.version>2.7.2</hadoop.common.version>
    <h2.version>1.4.190</h2.version>
    <commons.dbcp2.version>2.0.1</commons.dbcp2.version>
    <commons.cli.version>1.3.1</commons.cli.version>
    <gson-extras.version>0.2.1</gson-extras.version>

    <!--test library versions-->
    <mockrunner.jdbc.version>1.0.8</mockrunner.jdbc.version>



    <dependency.junit>4.12</dependency.junit>
    <dependency.org.mockito>2.0.2-beta</dependency.org.mockito>

    <plugin.maven-compiler-plugin>3.8.0</plugin.maven-compiler-plugin>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>



    <!-- language versions -->
    <java.version>1.8</java.version>
    <scala.version>2.10.5</scala.version>
    <scala.binary.version>2.10</scala.binary.version>
    <scalatest.version>2.2.4</scalatest.version>
    <scalacheck.version>1.12.5</scalacheck.version>

    <!-- frontend maven plugin related versions-->
    <node.version>v8.9.3</node.version>
    <npm.version>5.5.1</npm.version>
    <plugin.frontend.version>1.6</plugin.frontend.version>

    <!-- common library versions -->
    <slf4j.version>1.7.10</slf4j.version>
    <log4j.version>1.2.17</log4j.version>
    <libthrift.version>0.9.3</libthrift.version>
    <gson.version>2.2</gson.version>


    <httpcomponents.core.version>4.4.1</httpcomponents.core.version>
    <httpcomponents.client.version>4.5.1</httpcomponents.client.version>
    <httpcomponents.asyncclient.version>4.0.2</httpcomponents.asyncclient.version>
    <commons.lang.version>2.5</commons.lang.version>
    <commons.configuration.version>1.9</commons.configuration.version>
    <commons.codec.version>1.5</commons.codec.version>
    <commons.io.version>2.4</commons.io.version>
    <commons.collections.version>3.2.2</commons.collections.version>
    <commons.logging.version>1.1.1</commons.logging.version>

    <shiro.version>1.4.0</shiro.version>
    <joda.version>2.9.9</joda.version>

    <!-- test library versions -->
    <junit.version>4.12</junit.version>
    <mockito.version>1.10.19</mockito.version>
    <assertj.version>1.7.0</assertj.version>
    <powermock.version>1.6.4</powermock.version>

    <!-- plugin versions -->
    <plugin.compiler.version>3.1</plugin.compiler.version>
    <plugin.resource.version>2.7</plugin.resource.version>
    <plugin.dependency.version>2.8</plugin.dependency.version>
    <plugin.jar.version>2.4</plugin.jar.version>
    <plugin.remote.resource.version>1.5</plugin.remote.resource.version>
    <plugin.scm.version>1.8.1</plugin.scm.version>
    <plugin.enforcer.version>1.3.1</plugin.enforcer.version>
    <plugin.checkstyle.version>2.13</plugin.checkstyle.version>
    <plugin.surefire.version>2.17</plugin.surefire.version>
    <plugin.assembly.version>3.0.0</plugin.assembly.version>
    <plugin.exec.version>1.2.1</plugin.exec.version>
    <plugin.cobertura.version>2.7</plugin.cobertura.version>
    <plugin.clean.version>2.6.1</plugin.clean.version>
    <plugin.lifecycle.mapping.version>1.0.0</plugin.lifecycle.mapping.version>
    <plugin.antrun.version>1.7</plugin.antrun.version>
    <plugin.download.version>1.3.0</plugin.download.version>
    <plugin.deploy.version>2.8.2</plugin.deploy.version>
    <plugin.shade.version>3.1.1</plugin.shade.version>

    <PermGen>64m</PermGen>
    <MaxPermGen>512m</MaxPermGen>

    <!-- to be able to exclude some tests using command line -->
    <tests.to.exclude/>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <name>Maven Central</name>
      <url>http://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>central-mirror</id>
      <name>Maven Central Mirror</name>
      <url>http://central.maven.org/maven2/</url>
    </repository>
    <repository>
      <id>Spring Lib Release</id>
      <name>spring Lib Releese</name>
      <url>http://repo.spring.io/libs-release/</url>
    </repository>
  </repositories>
</project>
